<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCompassKiblat">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-57dp"
        android:src="@drawable/iv_header_compass_kiblat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lokasi_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_tv_lokasi_user"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lokasi_user"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_waktu_adzan" />

    <LinearLayout
        android:id="@+id/group_waktu_adzan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_waktu_sholat"
        app:layout_constraintStart_toStartOf="@+id/tv_waktu_sholat"
        app:layout_constraintTop_toBottomOf="@+id/tv_waktu_sholat">

        <TextView
            android:id="@+id/tv_jam_adzan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/jam_sholat"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_waktu_am_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/time_am"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_waktu_sholat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/waktu_sholat"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_compass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ic_needle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ic_compass"
        app:layout_constraintEnd_toEndOf="@+id/ic_compass"
        app:layout_constraintStart_toStartOf="@+id/ic_compass"
        app:layout_constraintTop_toTopOf="@+id/ic_compass"
        android:src="@drawable/ic_needle"/>

    <TextView
        android:id="@+id/tvDirectionCompass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="0°"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lokasi_user" />

    <!--<SurfaceView
        android:id="@+id/compass_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->



</androidx.constraintlayout.widget.ConstraintLayout>