<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bgheader"
            android:layout_width="456dp"
            android:layout_height="214dp"
            android:contentDescription="@string/desc_home_bgheader"
            android:src="@drawable/iv_home_bgheader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="332dp"
            android:layout_height="167dp"
            android:layout_marginTop="122dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_bgheader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clock_home"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/ic_clock"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/waktu_sholat"
                    android:textSize="12sp"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/poppins_medium"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_salam_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/salam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_halo_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/halo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_salam_home"
            android:layout_marginStart="40dp"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>