<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_login_illustration" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="64dp"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_outter"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_marginTop="48dp"
            android:translationZ="1dp"
            app:cardBackgroundColor="@color/container_outer"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/container_inner"
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:layout_weight="1"
                    android:translationZ="10dp"
                    app:cardCornerRadius="32dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_header_login_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/tv_header_login_email"
                            android:textColor="@color/text_faded2"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textfield_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            app:endIconMode="clear_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_header_login_email">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="320dp"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/tv_remember_me"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textfield_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:hint="Password"
                            app:endIconMode="password_toggle"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textfield_email">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="320dp"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/switch_rememberme"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="36dp"
                            android:layout_marginEnd="196dp"
                            android:text="@string/tv_switch_rememberme"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textfield_password" />


                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:dividerPadding="20dp"
                            android:orientation="horizontal"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:translationZ="40dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/icFacebookLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"
                                app:srcCompat="@drawable/ic_facebook" />

                            <ImageView
                                android:id="@+id/icTwitterLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"
                                app:srcCompat="@drawable/ic_twitter" />

                            <ImageView
                                android:id="@+id/icGoogleLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"
                                app:srcCompat="@drawable/ic_google_plus" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/button"
                            android:layout_width="280dp"
                            android:layout_height="52dp"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="REGISTER"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/switch_rememberme" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="29dp"
                            android:text="@string/tvb_forgotpass"
                            app:layout_constraintBottom_toTopOf="@+id/button"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/switch_rememberme"
                            app:layout_constraintTop_toBottomOf="@+id/textfield_password" />

                        <TextView
                            android:id="@+id/tvb_login_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_container_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="13dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/login_text_header"
                    android:textColor="@color/text_faded"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/container_inner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>